--- a/CrossPlatformPhotoApp/Supporting Files/Base.lproj/Main.storyboard
+++ b/CrossPlatformPhotoApp/Supporting Files/Base.lproj/Main.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
+        <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="19529"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -753,9 +754,6 @@
                             <slider hidden="YES" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="xrh-5q-bvk">
                                 <rect key="frame" x="18" y="14" width="444" height="28"/>
                                 <sliderCell key="cell" continuous="YES" state="on" alignment="left" maxValue="100" tickMarkPosition="above" sliderType="linear" id="YsV-x0-Z2q"/>
-                                <connections>
-                                    <action selector="changeBlurForPhotoImage:" target="APG-zO-l8t" id="afo-Ie-G27"/>
-                                </connections>
                             </slider>
                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="lnu-mJ-h1Z">
                                 <rect key="frame" x="417" y="223" width="45" height="32"/>
